# Richkware

./: CMakeLists.txt  Makefile
test/: CMakeLists.txt  test.cpp  test_001.cpp  test_002.cpp
